started the cogsci proceedings

--- a/Manuscripts/cogsci-2017/references.bib
+++ b/Manuscripts/cogsci-2017/references.bib
@@ -26,6 +26,16 @@
   publisher={Elsevier}
 }
 
+@article{kurtz2015human,
+  title={Human category learning: Toward a broader explanatory account},
+  author={Kurtz, Kenneth J},
+  journal={Psychology of Learning and Motivation},
+  volume={63},
+  pages={77--114},
+  year={2015},
+  publisher={Academic Press}
+}
+
 @article{kurtz2013human,
   title={Human learning of elemental category structures: Revising the classic result of Shepard, Hovland, and Jenkins (1961).},
   author={Kurtz, Kenneth J and Levering, Kimery R and Stanton, Roger D and Romero, Joshua and Morris, Steven N},
@@ -37,6 +47,17 @@
   publisher={American Psychological Association}
 }
 
+@article{luce1977choice,
+  title={The choice axiom after twenty years},
+  author={Luce, R Duncan},
+  journal={Journal of mathematical psychology},
+  volume={15},
+  number={3},
+  pages={215--233},
+  year={1977},
+  publisher={Academic Press}
+}
+
 @article{marsh1999inadvertent,
   title={The inadvertent use of prior knowledge in a generative cognitive task},
   author={Marsh, Richard L and Ward, Thomas B and Landau, Joshua D},
@@ -46,6 +67,17 @@
   pages={94--105},
   year={1999},
   publisher={Springer}
+}
+
+@article{nosofsky1984choice,
+  title={Choice, similarity, and the context theory of classification.},
+  author={Nosofsky, Robert M},
+  journal={Journal of Experimental Psychology: Learning, memory, and cognition},
+  volume={10},
+  number={1},
+  pages={104},
+  year={1984},
+  publisher={American Psychological Association}
 }
 
 @article{nosofsky1994comparing,
