added required sentence to acknowledgements

--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -131,11 +131,8 @@ By consequence, the \citet{jern2013probabilistic} model predicts that there shou
 \section{Simulations}
 \section{Discussion}
 \section{Acknowledgments}
-
-
-
-
-
+%JLA: We have to add this... It's part of the deal with the funding that supports your salary
+Support for this research was provided by the Office of the Vice Chancellor for Research and Graduate Education at the University of Wisconsin - Madison with funding from the Wisconsin Alumni Research Foundation.
 
 \begin{figure*}
     \begin{center}
