--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -71,38 +71,36 @@ where $w_k$ is a vector of attention parameters ($\sum_k{w_k} = 1$), weighting t
 
 When prompted to generate a new example, the model considers both the summed similarity to examples from other categories as well as the summed similarity to examples in the target category. More formally, the summed similarity $ss$ between generation candidate $y$ and the model's stored exemplars $x_j$ can be computed as:
 \begin{equation}
-  ss(y, x_j) = \sum_j{f_j s(y, x_j)}
+  ss(y, x) = \sum_j{\hat{f_j} s(y, x_j)}
 \end{equation}
-where $f_j$ is a function specifying each example's degree of contribution toward generation. Although $f_j$ may be set arbitrarily, in PACKER it is set according to class assignment. For known members of contrast categories, $f_j = -\phi$. For known members of the target category, $f_j = \gamma$. $\phi$ and $\gamma$ are thus free parameters ($\geq 0$) controlling the contribution of target- and contrast-category similarity to generation. Larger values for either parameter produce greater consideration of either type of similarity. When $\phi = \gamma$, similarity to contrast categories is effectively subtracted from similarity to the target category. Negative values for $ss(y, x_j)$ would then indicate that $y$ is more similar to members of contrast categories, and positive values indicate $y$ is more similar to members of the target category.
+where $\hat{f_j}$ is a function specifying each example's degree of contribution toward generation. Although $\hat{f_j}$ may be set arbitrarily, in PACKER it is set according to class assignment. For known members of contrast categories, $\hat{f_j} = \phi$. For known members of the target category, $\hat{f_j} = \gamma$. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of target- and contrast-category similarity to generation. Larger absolute values for either parameter produce greater consideration of that type of similarity, with values of 0 producing no effect. Negative values produce a `repelling' effect (exemplars are less likely to be generated nearby). Conversely, positive values produce a `pulling' effect (exemplars are more likely to be generated nearby). 
 
-% NOTE: Maybe we should use a different term for summed similarity? Or maybe just indicate specifically how this deviates from classification in the GCM.
+Because the model's main proposals are that new categories should be different from existing categories, and exemplars belonging to the same category should be similar to one another, PACKER is commonly simulated under the constraints that $\phi < 0$, $\gamma > 0$, thus, similarity to contrast categories is effectively subtracted from similarity to the target category. When $-\phi = \gamma$, negative summed similarities indicate that $y$ is more similar to members of contrast categories, and positive values indicate $y$ is more similar to members of the target category.
+
 
 The probability that a given candidate $y$ will be generated is evaluated using the \citet{luce1977choice} choice axiom. Candidates with larger summed similarity are more likely to be generated compared to candidates with smaller summed similarity:
 \begin{equation}
 p(y) = \dfrac
-    { exp( { \theta \cdot ss(y, x_j) } ) }
-    { \sum_i{ exp( { \theta \cdot ss(y_i, x_j) } ) } }
+    { exp( { \theta \cdot ss(y, x) } ) }
+    { \sum_i{ exp( { \theta \cdot ss(y_i, x) } ) } }
 \end{equation}
 where $\theta$ ($\geq 0$) is a free parameter controlling overall response determinism. 
 
-\subsubsection{Summary.}
-The PACKER model described above explains exemplar and category generation through one of the field's oldest traditions: exemplar representations. The model proposes that people generate categories by maximizing within-category similarity and minimizing between-category similarity. Unlike the model proposed by \citet{jern2013probabilistic}, the distributional properties of known categories affects performance only insofar as it constrains inter-exemplar similarities. Instead, the \textit{location} of known categories in the domain is crucial because it constrains remaining possible locations for new categories. See Figure \ref{fig:example-prob-spaces} for a depiction of the model's behavior.
 
 \begin{figure*}
     \begin{center}
     \inputpgf{figs/}{example-prob-spaces.pgf}
-    \caption{Predicted generation of a category `B' example, following exposure to one member of category `A' and one member of category `B'. Areas in which generation is not likely are shaded white; high probability areas are shaded blue. \textit{Left}: Predictions given $\{\phi = 1$, $\gamma = 0\}$ (contrast influence only). \textit{Center}: Predictions given $\{\phi = 0$, $\gamma = 1\}$ (target influence only).  \textit{Right}: Predictions given $\{\phi = 1$, $\gamma = 1\}$ (both constraints considered).  }
+    \caption{Predicted generation of a category `B' example, following exposure to one member of category `A' and one member of category `B'. Areas in which generation is not likely are shaded white; high probability areas are shaded blue. \textit{Left}: Predictions given $\{\phi = -1$, $\gamma = 0\}$ (contrast influence only). \textit{Center}: Predictions given $\{\phi = 0$, $\gamma = 1\}$ (target influence only).  \textit{Right}: Predictions given $\{\phi = -1$, $\gamma = 1\}$ (both constraints considered).  }
     \label{fig:example-prob-spaces}
     \end{center}
 \end{figure*}
 
+\subsubsection{Summary.}
+The PACKER model described above explains exemplar and category generation through exemplar similarity (one of the field's oldest traditions). The model proposes that people generate categories by maximizing within-category similarity and minimizing between-category similarity. Unlike the model proposed by \citet{jern2013probabilistic}, the distributional properties of known categories affects performance only insofar as it constrains inter-exemplar similarities. Instead, the \textit{location} of known categories in the domain is crucial because it constrains remaining possible locations for new categories. See Figure \ref{fig:example-prob-spaces} for a depiction of the model's behavior.
+
 \section{Behavioral Experiment}
 
-The behavioral experiment described below was designed to test a core prediction of the PACKER model: that the \textit{location} of contrast categories (as opposed to their structure), influences generation. The experiment follows the paradigm set by \citet{jern2013probabilistic}. First, participants are exposed to members of a known category (`Alpha', or `A'), and are then asked to generate exemplars belonging to a new category (`Beta', or `B').
-
-Because the goal of the study was to determine if the structure of known categories structure is the only determinant of generation, our experiment manipulated only the location of the Alpha category within the domain (the structure of the category was held constant). See Figure \ref{fig:middle-bottom-conditions} for a depiction of the experimental conditions. In both condition, members of the Alpha category are tightly clustered, with equal variance on both features and no correlation between features. The conditions differ only in the Y-Axis position of the Alpha category: in the `Middle' condition the Alpha category is placed in the center of the space, in the `Bottom' condition the Alpha category is placed in the bottom-center of the space. 
-
-By consequence, the \citet{jern2013probabilistic} model predicts that there should be no difference in the structure of generated categories, as the distributional characteristics of the domain do not differ between the two conditions. Conversely, the PACKER model can predict strong between-condition differences. % What are the predictions---
+The behavioral experiment described below was designed to test a core prediction of the PACKER model: that the \textit{location} of contrast categories (as opposed to their structure), influences generation. The experiment follows the paradigm set by \citet{jern2013probabilistic}: first, participants are exposed to members of a known category (`Alpha', or `A'), and are then asked to generate exemplars belonging to a new category (`Beta', or `B').
 
 \begin{figure}
     \begin{center}
@@ -113,34 +111,44 @@ By consequence, the \citet{jern2013probabilistic} model predicts that there shou
 \end{figure}
 
 
+Because the goal of the study was to determine if the structure of known categories is the only determinant of generation, our experiment manipulated only the location of the Alpha category within the domain (the structure of the category was held constant). See Figure \ref{fig:middle-bottom-conditions} for a depiction of the experimental conditions. In both conditions, members of the Alpha category are tightly clustered, with equal variance on both features and no correlation between features. Our manipulation is fairly `weak' --  the conditions have only a slight difference in the Y-Axis position of the Alpha category: in the `Middle' condition the Alpha category is placed in the center of the space, in the `Bottom' condition the Alpha category is placed in the bottom-center of the space. 
+
+By consequence, the \citet{jern2013probabilistic} model predicts that there should be no difference in the generated categories, as the distributional characteristics of the domain do not differ between the two conditions. However, the PACKER model can predict strong between-condition differences. Assuming exemplars are generated such that each category has strong within-class similarity and weak between-class similarity, top areas of the stimulus space should be used for generation more frequently in the Bottom condition (compared to Middle), as  stimuli in this area possess weaker similarity to members of the Alpha category. Conversely, the bottom areas of the space should be less frequently used for generation in the Bottom condition (compared to Middle), as stimuli in this area possess greater similarity to the Alpha category.
+
+
+
 \subsection{Participants \& Materials}
+
+We recruited 122 participants from Amazon Mechanical Turk. All participants were located in the United States. 61 Participants were assigned to the `Middle' condition, 61 were assigned to the `Bottom' condition. Stimuli were squares varying in color (RGB 25--230) and size (3.0--5.8cm), see Figure \ref{fig:stimuli-samples} for samples. The assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants.
+
+\begin{figure}
+    \begin{center}
+    \input{figs/stimuli-samples.pgf}
+    \caption{Sample stimuli (not drawn to scale).}
+    \label{fig:stimuli-samples}
+    \end{center}
+\end{figure}
+
 \subsection{Procedure}
+
+Participants began the experiment with a short training phase (3 blocks of 4 trials), where they iteratively observed exemplars belonging to the `Alpha' category. Participants were instructed to learn as much as they can about the Alpha category, and that they would answer a series of test questions afterwards. On each trial, a single exemplar from the Alpha category was presented, and participants were given as much time as they desired before moving on. 
+
+Following the training phase, participants were asked to generate four examples belonging to another category called `Beta'. Participants were instructed that members of the Beta category could be quite similar or different depending on what they think makes the most sense for the category, but that they were not allowed to make the same example twice. 
+
+As in the \citet{jern2013probabilistic} experiments, generation was completed using a sliding-scale interface. Participants were presented with two scales that could be used to change the color and size of the generated example. An on-screen preview of the example updated whenever one of the features was changed. Participants could generate any example along an evenly-spaced 9x9 grid, and they could change the example as much as they wanted before moving on. Neither the members of the Alpha category nor the previously generated Beta examples were visible during generation.
+
+% % Should we bother reporting this? we never even looked at the data.
+% Following generation participants completed a generalization phase where they were asked to classify 81 stimuli sampled across the domain space (along a 9x9 grid). On each trial, a single stimulus was presented and participants were asked to classify the item into either the Alpha or Beta category. The members of the Alpha and Beta categories were presented during the generalization phase, but feedback was not provided on responses.
+
+
 \subsection{Results}
 
-\begin{itemize}
-\item Following predictions of our exemplar model, the main interest was the use of space above and below the contrast category. [If-then logic]...
-\item Obvious effects of category location: do people tend to place the new category somewhere else? See Figure \ref{fig:middle-bottom-yranges}, Table \ref{table:subset-table}.
-\item The more interesting issue: does the remaining space constrain what types of categories people come up with? 
-\item Analysis is tricky because vertical range is not normally distributed (see Figure \ref{fig:middle-bottom-yranges}). Report parametric / nonparametric stats.
-\item Following core prediction of exemplar model, fewer participants used the top and bottom of the space when assigned the Bottom category, report 2x2x2 contingency table stats.
-\item However, we also observed a great deal of individual differences in the form of ... [report types of categories, maybe show samples?]
-%JLA: Yeah representative participants from each category and approximate size
-\end{itemize}
+Because the conditions differ only in their location along the Y (vertical) axis (see Figure \ref{fig:middle-bottom-conditions}), our main interest is in generation of Beta examples above and below the contrast category. 
+
+Table \ref{table:subset-table} contains the number of participants in each condition who generated at least one example possessing one of the 
 
 
-\section{Simulations}
-\section{Discussion}
-\section{Acknowledgments}
-%JLA: We have to add this... It's part of the deal with the funding that supports your salary
-Support for this research was provided by the Office of the Vice Chancellor for Research and Graduate Education at the University of Wisconsin - Madison with funding from the Wisconsin Alumni Research Foundation.
-
-\begin{figure*}
-    \begin{center}
-    \input{figs/middle-bottom-yranges.pgf}
-    \caption{Behavioral results. Each line shows the minimum and maximum value of a generated category along the Y (vertical) axis. Dots along each line represent the positions of individual exemplars in the category, and each participant's category is shown on a separate line. Participants are sorted by overall Y axis range, and then by condition.}
-    \label{fig:middle-bottom-yranges}
-    \end{center}
-\end{figure*}
+Fisher's Exact Tests reveal that a greater number of participants assigned to the Middle condition generated at least one Beta example in the bottom rows of the space, $p < 0.001$. Similarly, a greater number of Middle participants generated all four Beta examples in the bottom rows of the space, $p = 0.003$. Participants in the Bottom condition were more marginally more likely to generate at least one Beta example in the top rows of the space, $p = 0.088$, and they were significantly more likely to generate all four examples in the top rows of the space, $p = 0.017$. The conditions did not differ in the number of participants who placed at least one Beta example in the top rows \textit{and} at least one Beta example in the bottom rows, $p = 0.14$.
 
 \begin{table}[!ht]
 \begin{center} 
@@ -161,6 +169,25 @@ Support for this research was provided by the Office of the Vice Chancellor for 
 \end{center} 
 \end{table}
 
+
+
+\begin{figure*}
+    \begin{center}
+    \input{figs/middle-bottom-yranges.pgf}
+    \caption{Behavioral results. Each line shows the minimum and maximum value of a generated category along the Y (vertical) axis. Dots along each line represent the positions of individual exemplars in the category, and each participant's category is shown on a separate line. Participants are sorted by overall Y axis range, and then by condition.}
+    \label{fig:middle-bottom-yranges}
+    \end{center}
+\end{figure*}
+
+
+\subsection{Summary}
+
+
+\section{Simulations}
+\section{Discussion}
+\section{Acknowledgments}
+Support for this research was provided by the Office of the Vice Chancellor for Research and Graduate Education at the University of Wisconsin - Madison with funding from the Wisconsin Alumni Research Foundation. We would like to thanks Kenneth J. Kurtz for helpful comments on this work.
+% any other thanks?
 
 
 
