--- a/Manuscripts/cogsci-2017/references.bib
+++ b/Manuscripts/cogsci-2017/references.bib
@@ -69,6 +69,17 @@
   publisher={Springer}
 }
 
+@article{nelder1965simplex,
+  title={A simplex method for function minimization},
+  author={Nelder, John A and Mead, Roger},
+  journal={The computer journal},
+  volume={7},
+  number={4},
+  pages={308--313},
+  year={1965},
+  publisher={Br Computer Soc}
+}
+
 @article{nosofsky1984choice,
   title={Choice, similarity, and the context theory of classification.},
   author={Nosofsky, Robert M},
