--- a/Manuscripts/cogsci-2017/references.bib
+++ b/Manuscripts/cogsci-2017/references.bib
@@ -69,6 +69,15 @@
   publisher={Springer}
 }
 
+@article{minda2011prototype,
+  title={Prototype models of categorization: Basic formulation, predictions, and limitations},
+  author={Minda, John Paul and Smith, J David},
+  journal={Formal approaches in categorization},
+  pages={40--64},
+  year={2011},
+  publisher={Cambridge University Press New York, NY}
+}
+
 @article{nelder1965simplex,
   title={A simplex method for function minimization},
   author={Nelder, John A and Mead, Roger},
@@ -102,6 +111,17 @@
   publisher={Springer}
 }
 
+@article{reed1972pattern,
+  title={Pattern recognition and categorization},
+  author={Reed, Stephen K},
+  journal={Cognitive psychology},
+  volume={3},
+  number={3},
+  pages={382--407},
+  year={1972},
+  publisher={Elsevier}
+}
+
 @article{shepard1961learning,
   title={Learning and memorization of classifications.},
   author={Shepard, Roger N and Hovland, Carl I and Jenkins, Herbert M},
@@ -133,6 +153,14 @@
   pages={1--40},
   year={1994},
   publisher={Elsevier}
+}
+
+@article{ward1995s,
+  title={What’s old about new ideas},
+  author={Ward, Thomas B},
+  journal={The creative cognition approach},
+  pages={157--178},
+  year={1995}
 }
 
 @article{ward2002role,
