--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -4,7 +4,7 @@
 
 \usepackage{cogsci}
 \usepackage{pslatex}
-\usepackage{amsmath}
+\usepackage{mathtools}
 \usepackage[natbibapa]{apacite}
 
 % set up PGF
@@ -76,7 +76,8 @@ The PACKER model is an extension of the highly influential Generalized Context M
 
 As in the GCM, the similarity between two examples, $s(x_i, x_j)$, is defined as an inverse-exponential function of distance:
 \begin{equation}
-  s(x_i,x_j) = exp( -c \sum_{k}{|x_{ik} - x_{jk}|}w_k ) 
+  s(x_i,x_j) = exp( -c \sum_{k}{|x_{ik} - x_{jk}|}w_k )
+  \label{eq:similarity}
 \end{equation}
 where $w_k$ is a vector of attention parameters ($\sum_k{w_k} = 1$), weighting to the importance of each feature in the similarity computation. The $c$ parameter controls the specificity of examples: larger values of $c$ produce more \textit{specific} representations (exemplars that do not generalize broadly). The attention weights are of interest in explaining individual differences in generation strategy (discussed below), but for our formal simulations they are set uniformly.
 
@@ -85,6 +86,7 @@ where $w_k$ is a vector of attention parameters ($\sum_k{w_k} = 1$), weighting t
 When prompted to generate a new example, the model considers both the summed similarity to examples from other categories as well as the summed similarity to examples in the target category. More formally, the summed similarity $ss$ between generation candidate $y$ and the model's stored exemplars $x$ can be computed as:
 \begin{equation}
   ss(y, x) = \sum_j{\hat{f_j} s(y, x_j)}
+  \label{eq:packer-ss}
 \end{equation}
 where $\hat{f_j}$ is a function specifying each example's degree of contribution toward generation. Although $\hat{f_j}$ may be set arbitrarily, in PACKER it is set according to class assignment. For known members of contrast categories, $\hat{f_j} = \phi$. For known members of the target category, $\hat{f_j} = \gamma$. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of target- and contrast-category similarity to generation. Larger absolute values for either parameter produce greater consideration of that type of similarity, with values of 0 producing no effect. Negative values produce a `repelling' effect (exemplars are less likely to be generated nearby). Conversely, positive values produce a `pulling' effect (exemplars are more likely to be generated nearby). 
 
@@ -95,6 +97,7 @@ The probability that a given candidate $y$ will be generated is evaluated using 
 p(y) = \dfrac
     { exp( { \theta \cdot ss(y, x) } ) }
     { \sum_i{ exp( { \theta \cdot ss(y_i, x) } ) } }
+    \label{eq:packer-choice}
 \end{equation}
 where $\theta$ ($\geq 0$) is a free parameter controlling overall response determinism. 
 
@@ -202,7 +205,33 @@ Our behavioral experiment revealed strong effects of the role of category locati
 
 \section{Simulations}
 
-We conducted formal simulations to our data using the PACKER model described above, as well as a conjugate implementation of the hierarchical sampling model proposed by \citet{jern2013probabilistic}.
+We conducted formal simulations to our data using the PACKER model described above, as well as an exemplar-based \textit{copy-and-tweak} model, and conjugate implementation of the hierarchical sampling model proposed by \citet{jern2013probabilistic}. Below, we briefly describe the formal basis of the copy-and-tweak and hierarchical sampling models.
+
+\subsection{Copy-and-Tweak}
+The copy-and-tweak model proposes that generation is a two-part process: first, learners retrieve a source exemplar from memory, and then they change it in some way so that the generated item is sufficiently dissimilar. In our model, the probability that a given exemplar $z$ is retrieved from memory is given by: $p(z) = exp(\hat{f}_z) / \sum_z{ exp(\hat{f}_z) }$. $\hat{f}_z$ is a function specifying each item's relative chance of being selected. As in Equation \ref{eq:packer-ss}, $\hat{f}_j$ may be set arbitrarily. However, in our simulations, $\hat{f}_z = -\gamma$ for members of contrast categories, and $\hat{f}_z = \gamma$ for members of the target category. The resulting free parameter $\gamma$ ($>0$) thus controls the probability that a member of the target category will be retrieved from memory.
+
+After a source example is retrieved, the similarity between generation candidates $y$ and the source is computed as per Equation \ref{eq:similarity}. The model's goal is to generate an item that is similar to $z$, but exceeds a dissimilarity threshold (such that the new item is similar-but-not-too-similar). Formally, the probability that $y$ will be generated based on a source $z$, is given by:
+
+\begin{equation}
+  \begin{cases} 
+    p(y|z) \propto exp(\theta \cdot s(y,z)), & \text{if } s(y,z) \leq \tau \\
+    p(y|z) = 0, & \text{otherwise} 
+  \end{cases} 
+\end{equation}
+where $\theta$ is a response determinism parameter, and $\tau$ is a similarity threshold ($0 < \tau \leq 1$) specifying the amount of similarity tolerated between $y$ and $z$. Values of $p(y|z)$ are then normalized such that $\sum_i{p(y_i|z)} = 1$. To obtain predictions not depending on a given source example, the model's predictions can be aggregated over all possible sources:
+
+\begin{equation}
+  p(y) = \sum_z{p(z)p(y|z) }
+\end{equation}
+
+Thus, the probability that an example $y$ will be selected is a function of its similarity to each of the possible sources, as well as the probability each source will be retrieved.
+
+
+\subsection{Hierarchical Sampling}
+
+In the \cite{jern2013probabilistic} model, examples are viewed as samples of an underlying category distribution, which is in turn viewed as a sample of an underlying domain distribution. As in the implementation reported by \cite{jern2013probabilistic}, we assume that exemplars are distributed according to a multivariate normal distribution with parameters ($\mu, \Sigma$). To obtain a conjugate model, we assume that the domain of categories is inverse-Wishart distributed. Space does not allow for a full derivation of this model, and so we will simply report how generated category parameters ($\mu_B, \Sigma_B$) are inferred.
+
+
 
 % do we need to describe the implementation?
 
